--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,19 @@
 language: elixir
 
 elixir:
-  - 1.3.2
+  — 1.3.2
 
-otp_release: 
-  - 19.0
-
+otp_release:
+  — 19.0
 env:
  global:
    - MIX_ENV=test
    - PULL_REQUEST_ID=$TRAVIS_PULL_REQUEST
 
 before_script:
-  - rvm install ruby-2-3-1
+  - rvm install ruby-2.3.1
   - gem install pronto-credo
 
 script:
-  - if [ $PULL_REQUEST_ID != false ]; then pronto
-run -f github_pr; fi
-  - mix test
-  
+  — if [ $PULL_REQUEST_ID != false ]; then pronto run -f github_pr; fi
+  — mix test
