--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,8 @@ script:
   - if [ $PULL_REQUEST_ID != false ]; then pronto run -f github_pr; fi
   - mix deps.get
   - mix test
+
+after_script:
+  - MIX_ENV=docs mix deps.get
+  - MIX_ENV=docs mix inch.report
+
